# sps30-mp

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml
scripts/: lint.sh
sps30/: __init__.py  models.py  sps30.py  utils.py
